assets/css/style.css
:root {
    --banner-header-color: rgb(49 52 61);
    --banner-inset-color: rgb(145 203 205);
    --title-color: rgb(42 52 76);
    --h1: 30px;
    --h2: 28px;
}

html {
    min-width: 400px;
}

*, *::before, *::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    font: inherit;
}

img, picture, svg, video {
    display: block;
    max-width: 100%;
}

body {
    background-color: rgb(238 238 246);
    color: rgb(42 52 76);
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    font-size: 14px;
}

header {
    width: 100%;
    height: 80px;
    background-color: var(--banner-header-color);
    position: sticky;
    top: 0;
    z-index: 2;
}

.header-title {
    width: 300px;
    height: 40px;
    background-color: var(--banner-inset-color);
    color: var(--title-color);
    display: inline;
    float: left;
    margin-top: 15px;
    padding: 5px 0px 0px 40px;
    font-size: var(--h1);
}

.site-nav-menu {
    width: auto;
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: end;
    list-style-type: none;
    margin-right: 20px;
}

.site-nav-link {
    text-decoration: none;
    margin-right: 10px;
    width: fit-content;
    height: 25px;
    border-bottom: 3px solid var(--banner-inset-color);
    text-align: center;
    margin-top: 35px;
    padding: 0 10px;
    position: relative;
    color: var(--banner-inset-color);
    color: var(--banner-inset-color);
}

.site-nav-item:hover {
    color: white;
}

.site-nav-item:hover::after{
    width: 100%;
    content: " ";
    position: absolute;
    left: 0px;
    bottom: 0px;
    border: 1px solid white;
}

.site-nav-item:active::after {
    border: 1px solid rgb(14, 0, 207);
}

.hero {
    display: block;
    width: 100%;
    height: 200px;
    background-image: url(https://media.discordapp.net/attachments/989718721465569330/1053516551438999643/image.png?width=1149&height=525);
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
}

.hero-title {
    width: 300px;
    height: 40px;
    background-color: var(--banner-inset-color);
    position: absolute;
    bottom: 30px;
    right: 30px;
    padding-top: 10px;
    font-weight: bolder;
    text-align: center;
}

main {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
}

.section-card {
    height: fit-content;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    margin-bottom: 20px;
}

.section-title {
    min-height: fit-content;
    width: 30%;
    min-width: 200px;
    border-right: 3px solid var(--title-color);
    text-align: right;
    padding-right: 10px;
    font-size: var(--h2);
    font-weight: bold;
}

.p-text {
    display: none;
}

.section-content{
    width: 70%;
    height: fit-content;
    padding: 0px 20px;
}

#work-cards {
    display: grid;
    grid-template:
                "work-card-1 work-card-1" 300px
                "work-card-2 work-card-3" 100px
                "work-card-4 work-card-5" 100px
                ;
    row-gap: 10px;
    column-gap: 10px;
}

#work-card-1 {
    width: 100%;
    background-color: blue;
    grid-area: work-card-1;
    /* grid-column-start: 1;
    grid-column-end: 3; */
}

#work-card-2 {
    width: 100%;
    background-color: yellow;
    grid-area: work-card-2;
    /* grid-column-start: 1;
    grid-column-end: 2; */
}

#work-card-3 {
    width: 100%;
    background-color: green;
    grid-area: work-card-3;
    /* grid-column-start: 2;
    grid-column-end: 3; */
}

#work-card-4 {
    width: 100%;
    background-color: rgb(128, 0, 0);
    grid-area: work-card-4;
    /* grid-column-start: 2;
    grid-column-end: 3; */
}

#work-card-5 {
    width: 100%;
    background-color: rgb(32, 214, 47);
    grid-area: work-card-5;
    /* grid-column-start: 2;
    grid-column-end: 3; */
}

.contact-nav-menu {
    height: 100px;
    display: flex;
    flex-direction: row;
    list-style-type: none;
    justify-content: space-evenly;
    align-items: end;
}

.contact-nav-item {
    width: 100px;
    height: 100px;
    border: 1px solid white;
}

@media screen and (max-width: 768px) {
    .header-title {
        display: block;
        float: none;
        margin: 0 auto;
        padding: 0;
        text-align: center;
    }

    .site-nav-menu {
        width: auto;
        height: 40px;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: center;
        list-style-type: none;
        margin: 0px;
    }

    .site-nav-link {
        margin-top: 8px;
        margin-bottom: 0px;
    }

    .hero {
        display: flex;
        justify-content: center;
        align-items: flex-end;
        padding-bottom: 5px;
    }

    .hero-title {
        position: static;
        padding-top: 10px;
        font-weight: bolder;
        text-align: center;
    }

    #work-cards {
        width: 70%;
        height: fit-content;
        display: flex;
        flex-direction: column;
        /* border: 1px solid black; */
        align-items: center;
        justify-content: center;
    }

    .work-card {
        height: 200px;
        width: 200px;
        min-width: 150px;
    }
}

@media screen and (max-width: 480px) {
    .section-card {
        height: fit-content;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        margin-bottom: 20px;
    }

    .section-title {
        min-height: fit-content;
        width: fit-content;
        min-width: 150px;
        border-right: none;
        border-bottom: 3px solid var(--title-color);
        padding: 0 15px;
        text-align: center;
        margin: 0 auto 10px auto;
        font-size: var(--h2);
        font-weight: bold;
    }
    
    .section-content{
        width: 100%;
        height: fit-content;
        padding: 0px 20px;
    }

    #work-cards {
        width: 100%;
    }

    .pre-text {
        display: none;
    }

    .p-text {
        display: block;
    }
}

